adding style to page

--- a/Client/style.sass
+++ b/Client/style.sass
@@ -1,8 +1,21 @@
 $font-stack: Helvetica, sans-serif
 
 
-h1
+.container
   font: 100% $font-stack
-  color: red
-  margin: 30px
+  margin: 20px
 
+
+.git
+  font: 200% $font-stack
+  color: black
+  padding: 8px
+  background: #F35748
+
+.nav-bar
+  padding: 30px
+  color: gray
+  
+
+.list 
+  margin-top: 20px 
