--- a/Client/style.css
+++ b/Client/style.css
@@ -21,15 +21,12 @@ header img {
     margin: 0 auto 20px;
 }
 
-header .intro-text .name {
+header #text {
     display: block;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
-}
-
-header .intro-text .skills {
     font-size: 1.25em;
     font-weight: 300;
 }
@@ -40,11 +37,8 @@ header .intro-text .skills {
         padding-bottom: 100px;
     }
 
-    header .intro-text .name {
+    header #text {
         font-size: 4.75em;
-    }
-
-    header .intro-text .skills {
         font-size: 1.75em;
     }
 
