--- a/Client/style.css
+++ b/Client/style.css
@@ -1,94 +1,89 @@
-
-
-
-
 header {
-    text-align: justify;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 1.5em;
-    font-weight: 600;
-    color: #D4D4D4;
-    background: #fff;
+  text-align: justify;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  color: #D4D4D4;
+  background: #fff;
 }
-
 header .container {
-    padding-top: 100px;
-    padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
-
-
 header #text {
-    display: block;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  display: block;
+  text-transform: uppercase;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 2em;
+  font-weight: 700;
+  font-size: 1.25em;
+  font-weight: 300;
+}
+@media(min-width:768px) {
+  header .container {
+    padding-top: 200px;
+    padding-bottom: 100px;
+  }
+  header #text {
+    font-size: 4.75em;
+    font-size: 1.75em;
+  }
+}
+@media(min-width:768px) {
+  .navbar-fixed-top {
+    padding: 25px 0;
+    -webkit-transition: padding .3s;
+    -moz-transition: padding .3s;
+    transition: padding .3s;
+  }
+  .navbar-fixed-top .navbar-brand {
     font-size: 2em;
-    font-weight: 700;
-    font-size: 1.25em;
-    font-weight: 300;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+  }
+  .navbar-fixed-top.navbar-shrink {
+    padding: 10px 0;
+  }
+  .navbar-fixed-top.navbar-shrink .navbar-brand {
+    font-size: 1.5em;
+  }
 }
-
-@media(min-width:768px) {
-    header .container {
-        padding-top: 200px;
-        padding-bottom: 100px;
-    }
-
-    header #text {
-        font-size: 4.75em;
-        font-size: 1.75em;
-    }
-
-
-@media(min-width:768px) {
-    .navbar-fixed-top {
-        padding: 25px 0;
-        -webkit-transition: padding .3s;
-        -moz-transition: padding .3s;
-        transition: padding .3s;
-    }
-
-    .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
-        -webkit-transition: all .3s;
-        -moz-transition: all .3s;
-        transition: all .3s;
-    }
-
-    .navbar-fixed-top.navbar-shrink {
-        padding: 10px 0;
-    }
-
-    .navbar-fixed-top.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
-    }
-}
-
-
-
 .navbar {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+  text-transform: uppercase;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
 }
-
 .navbar a:focus {
-    outline: 0;
+  outline: 0;
 }
-
 .navbar .navbar-nav {
-    letter-spacing: 1px;
+  letter-spacing: 1px;
 }
-
 .navbar .navbar-nav li a:focus {
-    outline: 0;
+  outline: 0;
 }
-
 .navbar-default,
 .navbar-inverse {
-    border: 0;
+  border: 0;
 }
+/* CHART STYLES */
 
-
-
-
-
+#bar-chart div {
+  font: 10px sans-serif;
+  /*background-color: steelblue;*/
+  
+  text-align: right;
+  padding: 3px;
+  margin: 1px;
+  color: black;
+}
+.axis path {
+  fill: none;
+  stroke: #777;
+  shape-rendering: crispEdges;
+}
+.axis text {
+  font-family: Lato;
+  font-size: 13px;
+}
