front page styling and attribution

--- a/Client/style.css
+++ b/Client/style.css
@@ -10,6 +10,10 @@ header {
 .totals {
   color: red;
 }
+.disclaimer {
+  color:#d3d3d3;
+  font-size:12px;
+}
 header .container {
   padding-top: 100px;
   padding-bottom: 50px;
