--- a/Client/style.css
+++ b/Client/style.css
@@ -118,4 +118,8 @@ header #text {
     height: 350px;
   }
 }
+.footer-above {
+    border-style: solid;
+    border-top: thick double #dbdbdb;
+}
 
