adding about page

--- a/Client/style.css
+++ b/Client/style.css
@@ -18,7 +18,7 @@ header .container {
   padding-top: 50px;
   padding-bottom: 50px;
 }
-header #text {
+header #text{
   display: block;
   text-transform: uppercase;
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -27,6 +27,35 @@ header #text {
   font-size: 1.25em;
   font-weight: 300;
 }
+
+header h1 {
+  display: block;
+  text-transform: uppercase;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 2em;
+  font-weight: 700;
+  font-size: 1.25em;
+  font-weight: 300;
+}
+
+header p {
+  display: block;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1em;
+  font-weight: 700;
+  font-size: 1em;
+  font-weight: 300;
+}
+
+header .table-responsive{
+  display: block;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1em;
+  font-weight: 700;
+  font-size: 1em;
+  font-weight: 300;
+}
+
 @media(min-width:768px) {
   header .container {
     padding-top: 200px;
@@ -126,8 +155,5 @@ header #text {
     height: 350px;
   }
 }
-/*.footer-above {
-    border-style: solid;
-    border-top: thick double #dbdbdb;
-}*/
+
 
